Fixed horizontal scroll (overflow-x)

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
     background-color: rgb(34, 34, 34);
     overflow-x: hidden;
@@ -8,6 +7,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
 ::-webkit-scrollbar {
@@ -33,6 +33,7 @@ body {
     display: flex;
     justify-content: flex-end;
     flex-wrap: wrap;
+    width: 100%; /* Ensure the menu takes up 100% of the container width */
 }
 
 .menu li {
@@ -143,7 +144,6 @@ a {
     text-decoration: none;
 }
 
-
 #menu-toggle {
     display: none;
 }
@@ -189,4 +189,3 @@ a {
         display: block;
     }
 }
-
